--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
     <style>
         html, body {
+            min-height: 100%;
             height: 100%;
             margin: 0;
             padding: 0;
