--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -32,7 +32,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.1/umd/popper.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.runtime.min.js"></script>
-    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/vuex/3.0.0/vuex.min.js"></script>-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/vuex/3.0.1/vuex.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.1/vue-router.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
